@@ -30,6 +30,7 @@
 - updated: `F.localize()` has enabled `compression` by default
 - updated: HTTP server is listening after the framework is completely loaded
 - updated: (IMPORTANT) HTTP cache in dynamic content and static files
+- updated: `F.prototypes()` by adding `OperationOptions`
 
 - renamed: `allow-handle-static-files` to `allow-static-files`
 
